i18n update from transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ast.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ast.properties
@@ -41,6 +41,14 @@ desc_repetition = Repetici\u00f3n de pallabres (ex. 'eso eso')
 
 desc_repetition_short = Repetici\u00f3n de pallabres
 
+desc_repetition_beginning = Frases sigu\u00edes qu'entamen cola mesma pallabra
+
+desc_repetition_beginning_word = Tres frases sigu\u00edes entamen cola mesma pallabra.
+
+desc_repetition_beginning_adv = Dos frases sigu\u00edes entamen col mesmu alverbiu.
+
+desc_repetition_beginning_thesaurus = Reescribi la frase o usa'l diccionariu (men\u00fa Ferramientes > Llingua) p'atopar un sin\u00f3nimu.
+
 desc_unpaired_brackets = Par\u00e9ntesis, comines, esclamaciones, interrogaciones y asemeyaos despareyaos
 
 desc_uppercase_sentence = Comprueba qu'una frase entame con may\u00fascules
