--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
@@ -41,6 +41,14 @@ desc_repetition = Repetici\u00f3 de paraules (p.ex. 'ma ma')
 
 desc_repetition_short = Repetici\u00f3 de paraules
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Claus, cometes, par\u00e8ntesi i simbols semblants desemparellats
 
 desc_uppercase_sentence = Comprova que una frase comence per maj\u00fascula
