--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
@@ -41,6 +41,14 @@ desc_repetition = Opakov\u00e1n\u00ed slov (nap\u0159. 'bude bude')
 
 desc_repetition_short = Opakov\u00e1n\u00ed slov
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1vorky, uvozovky nebo  podobn\u00e9 symboly
 
 desc_uppercase_sentence = Zkontroluje zda v\u011bta za\u010d\u00edn\u00e1 velk\u00fdm po\u010d\u00e1te\u010dn\u00edm p\u00edsmenem
