--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
@@ -41,6 +41,14 @@ desc_repetition = Ordgentagelse (f.eks. 'den den')
 
 desc_repetition_short = Ordgentagelse
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Ikke parret parenteser, tuborgklammer, citationstegn og lignende symboler
 
 desc_uppercase_sentence = Kontroller at s\u00e6tningen starter med et stort begyndelsesbogstav
