--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -41,13 +41,13 @@ desc_repetition = Wortwiederholung (z.B. 'als als')
 
 desc_repetition_short = Wortwiederholung
 
-desc_repetition_beginning = Satzanfangwiederholung bei aufeinanderfolgenden S\u00e4tzen
+desc_repetition_beginning = Aufeinanderfolgende S\u00e4tze beginnen mit dem gleichen Wort
 
-desc_repetition_beginning_word = Drei aufeinanderfolgende S\u00e4tze beginnen mit demselben Wort.
+desc_repetition_beginning_word = Drei aufeinanderfolgende S\u00e4tze beginnen mit dem gleichen Wort.
 
-desc_repetition_beginning_adv = Zwei aufeinanderfolgende S\u00e4tze beginnen mit demselben Konjunktionaladverb.
+desc_repetition_beginning_adv = Zwei aufeinanderfolgende S\u00e4tze beginnen mit dem gleichen Adverb.
 
-desc_repetition_beginning_thesaurus = Formulieren Sie den Satz um oder verwenden Sie den Thesaurus (Men\u00fc Extras > Sprache), um ein Synonym zu finden.
+desc_repetition_beginning_thesaurus = Formulieren Sie den Satz um oder nutzen Sie ein Synonym.
 
 desc_unpaired_brackets = Unpaarige Anf\u00fchrungszeichen und Klammern
 
@@ -210,3 +210,4 @@ whitespace_repetition = M\u00f6glicher Tippfehler\: mehr als ein Leerzeichen hin
 ro = Rum\u00e4nisch
 
 zh = Chinesisch
+
