--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_eo.properties
@@ -41,6 +41,14 @@ desc_repetition = Ripetita vorto (ekz. 'li li')
 
 desc_repetition_short = Ripetita vorto
 
+desc_repetition_beginning = Sinsekvaj frazoj komenci\u011das per la sama vorto.
+
+desc_repetition_beginning_word = Tri sinsekvaj frazoj komenci\u011das per la sama vorto.
+
+desc_repetition_beginning_adv = Du sinsekvaj frazoj komenci\u011das per la sama adverbo.
+
+desc_repetition_beginning_thesaurus = Reverku la frazon a\u016d uzu la teza\u016dron (Ilo-menuo \u2192 Lingvo) por trovi sinonimon.
+
 desc_unpaired_brackets = Nekongruaj krampoj, rektaj krampoj, citiloj kaj similaj signoj
 
 desc_uppercase_sentence = Kontrolas, \u0109u frazo komenci\u011das per majuskla litero
