--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
@@ -41,6 +41,14 @@ desc_repetition = Repetici\u00f3n de una palabra (p. ej. 'soy soy')
 
 desc_repetition_short = Repetici\u00f3n de una palabra
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Par\u00e9ntesis, comillas, signos de exclamaci\u00f3n, interrogaci\u00f3n y similares desparejados
 
 desc_uppercase_sentence = Comprobar si la frase se inicia con una letra may\u00fascula
