--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_fr.properties
@@ -41,6 +41,14 @@ desc_repetition = Doublon (\u00ab\u00a0pour pour\u00a0\u00bb, \u00ab\u00a0je je\
 
 desc_repetition_short = Doublon
 
+desc_repetition_beginning = Des phrases succ\u00e9ssives commencent par le m\u00eame mot.
+
+desc_repetition_beginning_word = Trois phrases cons\u00e9cutives commencent par le m\u00eame mot.
+
+desc_repetition_beginning_adv = Deux phrases cons\u00e9cutives commencent par le m\u00eame adverbe.
+
+desc_repetition_beginning_thesaurus = Reformulez la phrase ou utilisez le dictionnaire des synonymes (menu Outils \u2192 Langues). 
+
 desc_unpaired_brackets = Guillemet fermant ou ouvrant manquant
 
 desc_uppercase_sentence = Majuscule en d\u00e9but de phrase
