--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
@@ -41,6 +41,14 @@ desc_repetition = Repetici\u00f3n dunha palabra (por exemplo, 'vai vai')
 
 desc_repetition_short = Repetici\u00f3n dunha palabra
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Par\u00e9nteses, comi\u00f1as e s\u00edmbolos similares desemparellados
 
 desc_uppercase_sentence = Comproba que unha oraci\u00f3n comece con mai\u00fascula
