--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
@@ -41,6 +41,14 @@ desc_repetition = Endurteki\u00f0 or\u00f0 (t.d. 'mun mun')
 
 desc_repetition_short = Endurteki\u00f0 or\u00f0
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Svigar, hornklofar e\u00f0a \u00f6nnur greinarmerki standast ekki \u00e1
 
 desc_uppercase_sentence = Athuga hvort setning hefst \u00e1 st\u00f3rum staf
