--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_it.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+atd = Determina la lingua in automatico
 
-ast = 
+ast = Asturiano
 
 be = Bielorusso
 
-br = 
+br = Bretone
 
 ca = Catalano
 
@@ -40,6 +40,14 @@ desc_double_punct = Doppia battitura di punti o di virgole
 desc_repetition = Parola ripetuta (es. 'casa casa')
 
 desc_repetition_short = Ripetizione
+
+desc_repetition_beginning = Frasi susseguenti che iniziano con la stessa parola
+
+desc_repetition_beginning_word = Tre frasi susseguenti che iniziano con la stessa parola.
+
+desc_repetition_beginning_adv = Due frasi susseguenti che iniziano con lo stesso avverbio.
+
+desc_repetition_beginning_thesaurus = Riscrivi la frase con termini diversi oppure utilizza un dizionario dei sinonimi.
 
 desc_unpaired_brackets = Non chiusura di parentesi, virgolette e altra punteggiatura simile
 
@@ -77,15 +85,15 @@ fr = Francese
 
 gl = Galiziano
 
-guiAddButton=
+guiAddButton=Aggiungi...
 guiCancelButton = Annulla
 
 guiCheckComplete = LanguageTool ha completato il controllo.
-guiCloseButton=
+guiCloseButton=Chiudi
 
 guiConfigWindowTitle = Opzioni LanguageTool
 
-guiDemoText = Questo \u010d un esempio di input per dimostrare il funzionamento di LanguageTool. Si noti, per\u0148, che non include il controllo ortografico.works.
+guiDemoText = Questo \u00e8 un esempio di input per dimostrare il funzionamento di LanguageTool. Si noti, per\u00f2, che non include il controllo ortografico.
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Probabili errori\:
@@ -116,7 +124,7 @@ guiNoErrorsFound = Niente da segnalare (linguaggio\: {0})
 
 guiNoErrorsFoundSelectedText = Niente da segnalare nel testo selezionato (linguaggio\: {0})
 
-guiOKButton = 
+guiOKButton = &OK
 
 guiOOoChangeButton = &Cambia
 
@@ -130,16 +138,16 @@ guiOOoOptionsButton = Opzioni...
 
 guiProgressWindowTitle = LanguageTool\: Controllo in corso...
 
-guiRemoveButton=
+guiRemoveButton=Rimuovi
 guiReplaceWindowTitle = Rimpiazza il testo
 
 guiReplaceWithOtherText = <altro testo>
 
 guiRunOnPort = Esegui come server sulla po&rta
 
-guiSelectionCheckComplete = Il controllo LanguageTool del testo selezionato \u010d completo.
+guiSelectionCheckComplete = Il controllo LanguageTool del testo selezionato \u00e8 completo.
 
-guiTagText = 
+guiTagText = Associa &Tag al Testo
 
 incorrect_case = Questa frase non inizia con una maiuscola
 
@@ -147,13 +155,13 @@ is = Islandese
 
 it = Italiano
 
-km = 
+km = Khmer
 
 lt = Lituano
 
 missing_space_after_comma = Inserire uno spazio dopo la virgola
 
-ml = 
+ml = Malayalam
 
 nl = Olandese
 
@@ -167,11 +175,11 @@ pl = Polacco
 
 repetition = Possibile errore di battitura\: parola ripetuta
 
-result1 = <br><b> {0}. Line {1}, column {2}</b><br>
+result1 = <br><b> {0}. Riga {1}, colonna {2}</b><br>
 
 resultAreaText = I rusultati appariranno qui
 
-resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
+resultTime = <br>Tempo impiegato\: {0}ms (include {1}ms per controllo regole)<br>
 
 ru = Russo
 
@@ -185,7 +193,7 @@ startChecking = Inizio controllo a {0}
 
 sv = Svedese
 
-tl = 
+tl = Tagalog
 
 textLanguage = Linguaggio del testo\:
 
@@ -201,5 +209,5 @@ whitespace_repetition = Probabile errore\: ripetizione di spazio
 
 ro = Rumeno
 
-zh = 
+zh = Cinese
 
