--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
@@ -41,6 +41,14 @@ desc_repetition = \u1798\u17b6\u1793\u200b\u200b\u179c\u17b6\u179a\u17c1\u178e\u
 
 desc_repetition_short = \u1798\u17b6\u1793\u200b\u200b\u179c\u17b6\u179a\u17c1\u178e\u179c\u17b6\u1780\u17d2\u1799\u200b\u1796\u17b6\u1780\u17d2\u1799
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = \u1798\u17b6\u1793\u200b\u179a\u17c9\u17b6\u178f\u17cb \u1783\u17d2\u1793\u17b6\u1794 \u17a2\u1796\u17d2\u1797\u1793\u17d2\u178f\u179a\u200b\u179f\u1789\u17d2\u1789\u17b6 \u17ac\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1798\u17bd\u1799\u200b\u178e\u17b6\u200b\u1795\u17d2\u179f\u17c1\u1784\u200b\u1791\u17c0\u178f\u200b\u178a\u17c2\u179b\u200b\u1797\u17d2\u179b\u17c1\u1785\u200b\u178a\u17b6\u1780\u17cb\u200b\u1782\u17bc
 
 desc_uppercase_sentence = 
