--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
@@ -41,6 +41,14 @@ desc_repetition = Pasikartojantys \u017eod\u017eiai (pvz. "ar ar")
 
 desc_repetition_short = 
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = 
 
 desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios raid\u0117s
