--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
@@ -41,6 +41,14 @@ desc_repetition = Herhaling (bijv. 'de de')
 
 desc_repetition_short = Herhaling
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Onjuist gecombineerde leestekens
 
 desc_uppercase_sentence = Controleert of een zin begint met een hoofdletter
