--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
@@ -41,6 +41,14 @@ desc_repetition = Powt\u00f3rzenie wyrazu (np. \u201ejest jest\u201d)
 
 desc_repetition_short = Powt\u00f3rzenie wyrazu
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Niesparowane nawiasy i cudzys\u0142owy
 
 desc_uppercase_sentence = Test, czy zdanie zaczyna si\u0119 wielk\u0105 liter\u0105
