--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
@@ -41,6 +41,14 @@ desc_repetition = Opakovanie slov (napr. 'bude bude')
 
 desc_repetition_short = Opakovanie slov
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1tvorky, \u00favodzovky alebo podobn\u00e9 symboly
 
 desc_uppercase_sentence = Skontrolujte, \u010di veta za\u010d\u00edna ve\u013ek\u00fdmi po\u010diato\u010dn\u00fdmi p\u00edsmenami
