--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sl.properties
@@ -41,6 +41,14 @@ desc_repetition = Podvojena beseda (npr. 'bo bo')
 
 desc_repetition_short = Podvojena beseda
 
+desc_repetition_beginning = Zaporedne povedi, ki se za\u010denjajo z isto besedo
+
+desc_repetition_beginning_word = Trije zaporedne povedi, ki se za\u010denjajo z isto besedo.
+
+desc_repetition_beginning_adv = Dve zaporedni povedi, ki se za\u010denjajo z istim prislovom.
+
+desc_repetition_beginning_thesaurus = Prebesedite poved ali uporabite slovar sopomenk in poi\u0161\u010dite sopomenko.
+
 desc_unpaired_brackets = Neparni oklepaji, zaviti oklepaji, narekovaji in podobni znaki
 
 desc_uppercase_sentence = Preveri, da se poved za\u010dne z veliko za\u010detnico
