--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_tl.properties
@@ -41,6 +41,14 @@ desc_repetition = Word repetition (e.g. 'pagkain pagkain')
 
 desc_repetition_short = Word repetition
 
+desc_repetition_beginning = Successive sentences beginning with the same word
+
+desc_repetition_beginning_word = Three successive sentences begin with the same word.
+
+desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+
+desc_repetition_beginning_thesaurus = Reword the sentence or use the thesaurus (menu Tools > Language) to find a synonym.
+
 desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
 
 desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
