--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_zh.properties
@@ -41,6 +41,14 @@ desc_repetition = \u8bcd\u8bed\u91cd\u590d(\u4f8b\u5982\uff1a\u201cwill will\u20
 
 desc_repetition_short = \u8bcd\u8bed\u91cd\u590d
 
+desc_repetition_beginning = \u4ee5\u76f8\u540c\u8bcd\u8bed\u5f00\u5934\u7684\u540e\u7eed\u53e5\u5b50
+
+desc_repetition_beginning_word = \u4e09\u4e2a\u540e\u7eed\u53e5\u5b50\u4ee5\u76f8\u540c\u7684\u8bcd\u8bed\u5f00\u5934\u3002
+
+desc_repetition_beginning_adv = \u4e24\u4e2a\u540e\u7eed\u7684\u53e5\u5b50\u4ee5\u76f8\u540c\u7684\u526f\u8bcd\u5f00\u5934\u3002
+
+desc_repetition_beginning_thesaurus = \u6539\u5199\u53e5\u5b50\u6216\u8005\u4f7f\u7528\u53d9\u8bcd\u8868(\u83dc\u5355\uff1a\u5de5\u5177>\u8bed\u8a00)\u5bfb\u627e\u540c\u4e49\u8bcd\u3002
+
 desc_unpaired_brackets = \u4e0d\u6210\u5bf9\u7684\u82b1\u62ec\u53f7\uff0c\u62ec\u53f7\uff0c\u5f15\u53f7\u548c\u7c7b\u4f3c\u7684\u7b26\u53f7
 
 desc_uppercase_sentence = \u68c0\u67e5\u4e00\u4e2a\u4ee5\u5927\u5199\u5b57\u6bcd\u5f00\u5934\u7684\u53e5\u5b50
