--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
@@ -41,6 +41,14 @@ desc_repetition = Ger doublet (\u00ab\u00a0evit evit\u00a0\u00bb, \u00ab\u00a0me
 
 desc_repetition_short = Ger doublet
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Mankout a ra ur grommell, ur c'hroched, pe un arouezenn damhe\u00f1vel
 
 desc_uppercase_sentence = Pennlizherenn e dero\u00f9 ur frazenn
