--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
@@ -41,6 +41,14 @@ desc_repetition = Cuv\u00e2nt repetat (ex\: \u201evoi voi\u201d)
 
 desc_repetition_short = Cuv\u00e2nt repetat
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Acolade, paranteze, ghilimele sau alte simboluri similare desperecheate
 
 desc_uppercase_sentence = Verific\u0103 dac\u0103 propozi\u021bia \u00eencepe cu liter\u0103 mare
