--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
@@ -41,6 +41,14 @@ desc_repetition = Repetition av ord (exempelvis 'till till')
 
 desc_repetition_short = Repetition av ord
 
+desc_repetition_beginning = 
+
+desc_repetition_beginning_word = 
+
+desc_repetition_beginning_adv = 
+
+desc_repetition_beginning_thesaurus = 
+
 desc_unpaired_brackets = Icke ihopparade parenteser, citattecken eller liknande symboler
 
 desc_uppercase_sentence = Kontrollera att meningar b\u00f6rjar med stor bokstav
