i18n update from transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_gl.properties
@@ -41,13 +41,13 @@ desc_repetition = Repetici\u00f3n dunha palabra (por exemplo, 'vai vai')
 
 desc_repetition_short = Repetici\u00f3n dunha palabra
 
-desc_repetition_beginning = 
+desc_repetition_beginning = Varias frases seguidas comezan coa mesma palabra.
 
-desc_repetition_beginning_word = 
+desc_repetition_beginning_word = Tres frases seguidas comezan coa mesma palabra.
 
-desc_repetition_beginning_adv = 
+desc_repetition_beginning_adv = D\u00faas frases seguidas comezan co mesmo adverbio.
 
-desc_repetition_beginning_thesaurus = 
+desc_repetition_beginning_thesaurus = Refaga a frase ou empregue un tesauro para atopar un sin\u00f3nimo.
 
 desc_unpaired_brackets = Par\u00e9nteses, comi\u00f1as e s\u00edmbolos similares desemparellados
 
