set trunk to version 1.7-dev

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -1,5 +1,10 @@
 LanguageTool Change Log
 
+1.7-dev (release planned for around 2012-03-25)
+
+ -...
+
+
 1.6 (2011-12-31)
 
  -Breton:
@@ -45,6 +50,7 @@ LanguageTool Change Log
  -API:
    -moved the packages from de.danielnaber.languagetool.* to org.languagetool.*
    -added new public field JLanguageTool.BUILD_DATE
+
 
 1.5 (2011-09-25)
 
