- updated CHANGES.txt for future version 1.7 for   changes already made in French and Breton.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,8 +2,12 @@ LanguageTool Change Log
 
 1.7-dev (release planned for around 2012-03-25)
 
- -...
+ -Breton
+   -several new rules
 
+ -French:
+   -updated dictionary to use Dicollecte-4.4.1
+   -several new rules
 
 1.6 (2011-12-31)
 
