[de] new rule "es wir (wird)"

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -9,6 +9,11 @@ LanguageTool Change Log
    -updated dictionary to use Dicollecte-4.4.1
    -several new rules
 
+ -German:
+   -fixed a few false alarms
+   -added a few new rules
+
+
 1.6 (2011-12-31)
 
  -Breton:
