- updated CHANGES.txt for Esperanto.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,11 +4,11 @@ LanguageTool Change Log
 
  -Breton
    -several new rules
-
+ -Esperanto:
+   -several new rules
  -French:
    -updated dictionary to use Dicollecte-4.4.1
    -several new rules
-
  -German:
    -fixed a few false alarms
    -added a few new rules
