add licence information for CJFtransform_v1.0.1_bin.jar

--- a/trunk/JLanguageTool/libs/README
+++ b/trunk/JLanguageTool/libs/README
@@ -4,6 +4,7 @@ For more detailed license information, see COPYING.txt and README.txt.
 This is the list of libraries used by LanguageTool and their licenses:
 
 bliki.jar: Eclipse Public License 1.0, http://code.google.com/p/gwtwiki/
+CJFtransform_v1.0.1_bin.jar: Apache License 2.0, http://code.google.com/p/cjftransform/
 commons-lang.jar: Apache License 2.0, http://commons.apache.org/lang/
 commons-logging.jar: Apache License 2.0, http://commons.apache.org/logging/
 commons-validator.jar: Apache License 2.0, http://commons.apache.org/validator/
