[ru] Update rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -12,7 +12,9 @@ LanguageTool Change Log
  -German:
    -fixed a few false alarms
    -added a few new rules
-
+ -Russian:
+   -fixed some false alarms
+   -added a few new rules
 
 1.6 (2011-12-31)
 
