- added sanity check to detect duplicate exceptions in grammar rules. - added sanity check to detect exceptions with scope="next" yet   without skip="..." in token (those exception never apply)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -6,6 +6,7 @@ LanguageTool Change Log
    -several new rules
  -Esperanto:
    -several new rules
+   -web page http://www.languagetool.org/eo/ translated in Esperanto 
  -French:
    -updated dictionary to use Dicollecte-4.4.1
    -several new rules
@@ -15,6 +16,11 @@ LanguageTool Change Log
  -Russian:
    -fixed some false alarms
    -added a few new rules
+
+ -Internal changes:
+   - added sanity check to detect duplicate exceptions in grammar rules.
+   - added sanity check to detect exceptions with scope="next" yet
+     without skip="..." in grammar rules.
 
 1.6 (2011-12-31)
 
