errors are now marked with red background instead of red font so whitespace problems can easily be spotted

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -17,10 +17,14 @@ LanguageTool Change Log
    -fixed some false alarms
    -added a few new rules
 
+ -GUI: errors are now marked with red background instead of red font
+  so whitespace problems can easily be spotted
+
  -Internal changes:
    - added sanity check to detect duplicate exceptions in grammar rules.
    - added sanity check to detect exceptions with scope="next" yet
      without skip="..." in grammar rules.
+
 
 1.6 (2011-12-31)
 
