[en] mention update of English rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,6 +2,8 @@ LanguageTool Change Log
 
 1.7-dev (release planned for around 2012-03-25)
 
+ -English
+   -a few new rules
  -Breton
    -several new rules
  -Esperanto:
