bugfix: the "fromx" position in the XML output was wrong sometimes - adapting the test cases, I think they were wrong

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -19,6 +19,8 @@ LanguageTool Change Log
    -fixed some false alarms
    -added a few new rules
 
+ -bugfix: the "fromx" position in the XML output was wrong sometimes
+
  -GUI: errors are now marked with red background instead of red font
   so whitespace problems can easily be spotted
 
