bugfix: the "contextoffset" position in the XML output was wrong when there were XML-escaped characters in the context

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -20,6 +20,8 @@ LanguageTool Change Log
    -added a few new rules
 
  -bugfix: the "fromx" position in the XML output was wrong sometimes
+ -bugfix: the "contextoffset" position in the XML output was wrong
+  when there were XML-escaped characters in the context
 
  -GUI: errors are now marked with red background instead of red font
   so whitespace problems can easily be spotted
