fixed a bug in the POS tagger incorrectly returning lowercase word (patch by Maksym Davydov)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -18,6 +18,9 @@ LanguageTool Change Log
  -Russian:
    -fixed some false alarms
    -added a few new rules
+ -Ukrainian:
+   -fixed a bug in the POS tagger incorrectly returning lowercase word, breaking
+    the rule that checks for uppercase sentence starts (Maksym Davydov)
 
  -bugfix: the "fromx" position in the XML output was wrong sometimes
  -bugfix: the "contextoffset" position in the XML output was wrong
