consecutive tab characters are not considered an error anymore

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -25,6 +25,7 @@ LanguageTool Change Log
  -bugfix: the "fromx" position in the XML output was wrong sometimes
  -bugfix: the "contextoffset" position in the XML output was wrong
   when there were XML-escaped characters in the context
+ -consecutive tab characters are not considered an error anymore
 
  -GUI: errors are now marked with red background instead of red font
   so whitespace problems can easily be spotted
