new optional rule element "url" (optional): an URL to a page that explains the rule leading to the error in more detail -- not used yet

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -23,9 +23,14 @@ LanguageTool Change Log
     the rule that checks for uppercase sentence starts (Maksym Davydov)
 
  -bugfix: the "fromx" position in the XML output was wrong sometimes
+
  -bugfix: the "contextoffset" position in the XML output was wrong
   when there were XML-escaped characters in the context
+
  -consecutive tab characters are not considered an error anymore
+
+ -new optional rule element "url" (optional): an URL to a page that explains
+  the rule leading to the error in more detail. Not used yet.
 
  -GUI: errors are now marked with red background instead of red font
   so whitespace problems can easily be spotted
