server mode: by default, the server binds only to localhost now

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -35,6 +35,9 @@ LanguageTool Change Log
  -GUI: errors are now marked with red background instead of red font
   so whitespace problems can easily be spotted
 
+ -Server mode: by default, the server only binds to localhost now. Although requests from
+  non-localhost had been denied before by default, this should be more secure.
+
  -Internal changes:
    - added sanity check to detect duplicate exceptions in grammar rules.
    - added sanity check to detect exceptions with scope="next" yet
