in LibreOffice/OpenOffice.org, the wrong error message was displayed for some rules (those that did not have a "short" message). Fixes bug #3496785

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -22,6 +22,9 @@ LanguageTool Change Log
    -fixed a bug in the POS tagger incorrectly returning lowercase word, breaking
     the rule that checks for uppercase sentence starts (Maksym Davydov)
 
+ -bugfix: in LibreOffice/OpenOffice.org, the wrong error message was displayed
+  for some rules (those that did not have a "short" message)
+
  -bugfix: the "fromx" position in the XML output was wrong sometimes
 
  -bugfix: the "contextoffset" position in the XML output was wrong
