[ru] Russian webpage - update

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -17,8 +17,9 @@ LanguageTool Change Log
    -added a few new rules
  -Russian:
    -fixed some false alarms
-   -added a few new rules
- -Ukrainian:
+   -added several new rules
+   -created new web page http://www.languagetool.org/ru/  in Russian  
+-Ukrainian:
    -fixed a bug in the POS tagger incorrectly returning lowercase word, breaking
     the rule that checks for uppercase sentence starts (Maksym Davydov)
 
