hide support for Swedish, as requested by its maintainer - all the code is still there

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -19,9 +19,14 @@ LanguageTool Change Log
    -fixed some false alarms
    -added several new rules
    -created new web page http://www.languagetool.org/ru/  in Russian  
--Ukrainian:
+ -Ukrainian:
    -fixed a bug in the POS tagger incorrectly returning lowercase word, breaking
     the rule that checks for uppercase sentence starts (Maksym Davydov)
+ -Swedish:
+   -Support for Swedish has been disabled because it was not actively maintained
+    for a longer time and never reached a level that the old maintainer was happy
+    with. It will be activated again as soon as a new maintainer is found, any
+    help is welcome!
 
  -bugfix: in LibreOffice/OpenOffice.org, the wrong error message was displayed
   for some rules (those that did not have a "short" message)
